[package]
name = "egui_baseview_test_vst2"
version = "0.1.0"
authors = ["DGriffin <github@dgdigital.net>"]
edition = "2018"
license = "MIT"

[lib]
name = "egui_baseview_test_vst2"
crate-type = ["cdylib"]

[dependencies]
baseview = {git = "https://github.com/RustAudio/baseview", branch = "master"}
dirs = "3"
log = "0.4"
log-panics = "2"
raw-window-handle = "0.3"
simplelog = "0.8"
vst = "0.2"
rtrb = "0.1.1"
egui-baseview = {git = "https://github.com/BillyDM/egui-baseview", branch = "main"}
egui = "0.7"