[package]
name = "egui_baseview_test_vst2"
version = "0.1.0"
authors = ["DGriffin <github@dgdigital.net>"]
edition = "2018"
license = "MIT"

[lib]
name = "egui_baseview_test_vst2"
crate-type = ["cdylib"]

[dependencies]
baseview = {git = "https://github.com/RustAudio/baseview", rev = "d399c1275522ae75f5a82caadd904df2685c8660" }
dirs = "3"
log = "0.4"
log-panics = "2"
raw-window-handle = "0.3"
simplelog = "0.8"
vst = "0.2"
rtrb = "0.1.1"
egui-baseview = {git = "https://github.com/BillyDM/egui-baseview", rev = "c17f556fdc8b5d9278de473f6de6534c67cedf65" }
egui = "0.12.0"